--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <nav>
-            商店 社区 关于 客服
+            商店 社区 关于 客服 <a href="register.html">注册</a>
         </nav>
     </header>
 
