--- a/register.html
+++ b/register.html
@@ -3,23 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>register</title>
+  <link href="css/register.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-    <nav>主页</nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">主页</a></li>
+            </ul>
+        </nav>
     </header>
     <h1>创建帐户</h1>
     <section>
-        <style>
-            input:not([type="checkbox"],[type="radio"]),select,textarea
-            {
-                display: block;
-            }
-            textarea
-            {
-                width: 100%;
-            }
-        </style>
 
         <form action="#" method="post">
             <p><label for="username">用户名</label></p>
@@ -122,10 +117,11 @@
 本站定义的网络服务内容包括：文字、软件、声音、图片、录象、图表中的全部内容；电子邮件的全部内容；本站为用户提供的其他信息。所有这些内容受版权、商标、标签和其它财产所有权法律的保护。所以，用户只能在本站授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。本站内所有的文章、资讯、资料、数据版权归原文作者和本站共同所有，任何人需要转载，必须征得原文作者或本站授权。本站注册用户在本站社区发表的作品，本站有权在网站内免费使用。
 13、法律
 网络服务条款要与中华人民共和国的法律解释相一致，用户和本站一致同意服从高等法院所有管辖。如发生本站服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持对用户产生法律效力和影响。</textarea>
+            <br>
             <input id="terms" name="terms" type="radio" value="agree" required><span>同意</span>
             <input id="terms" name="terms" type="radio" value="disagree"><span>不同意</span><br>
 
-            <p><label for="check">验证码</label></p>
+            <p><label for="check">验证</label></p>
             <textarea id="terms" name="terms" rows="10" readonly>
                  ,-""""-.
                ,'      _ `.
