--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Steam 社区 :: No.3017 ∈ USSR :: 评测 Mountain</title>
+  <link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
         <nav>
-            商店 社区 关于 客服 <a href="register.html">注册</a>
+            <ul>
+                <li>商店</li> <li>社区</li> <li>关于</li> <li>客服</li> <li><a href="register.html">注册</a></li>
+            </ul>
         </nav>
     </header>
 
-    <h1><img src="images/user_icon.jpg">No.3017 ∈ USSR » 评测 » Mountain</h1>
+    <div class="title"><img src="images/user_icon.jpg"><div> No.3017 ∈ USSR <span class="symbol">»</span> <span class="subtitle">评测</span> <span class="symbol">»</span> <span class="subtitle">Mountain</span></div></div>
 
     <aside>
         <img src="images/header.jpg">
@@ -28,10 +31,18 @@
             有 126 人觉得这篇评测很欢乐
         </blockquote>
         <h2>推荐</h2>
-        <small>
-            过去 2 周 0.0 小时 / 总时数 3,812.9 小时<br>
-            发布于：2017年3月30日下午7:25
-        </small>
+        <p>
+            <small>
+                过去 2 周 0.0 小时 / 总时数 3,812.9 小时
+
+            </small>
+        </p>
+        <p>
+            <small>
+                发布于：2017年3月30日下午7:25
+            </small>
+        </p>
+
         <p>山什么的已经无所谓了。因为已经不再有教，值得去传了。传达不了的信仰已经不需要了。因为已经不再有人，值得去爱了。</p>
 
         <p>又到了山神的季节。</p>
@@ -46,16 +57,16 @@
     <hr>
 
     <section>
-        <p>
+        <div class="value">
             这篇评测是否有价值？
             <ul>
                 <li>是</li>
                 <li>否</li>
                 <li>欢乐</li>
             </ul>
-        </p>
+        </div>
         <h3>25 条留言</h3>
-        <ul>
+        <ul class="comment">
             <li>
                 <h4>Aeons___ <small>2017年12月2日下午2:44</small></h4>
                 先打死再说
@@ -107,7 +118,7 @@
                 一曲届不到的山送给大家
             </li>
         </ul>
-        < 1 2 3 >
+        < <span class="active">1</span> 2 3 >
     </section>
 </body>
 </html>
