--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <header>
         <nav>
             <ul>
-                <li>商店</li> <li>社区</li> <li>关于</li> <li>客服</li> <li><a href="register.html">注册</a></li>
+                <li>商店</li><!--
+             --><li>社区</li><!--
+             --><li>关于</li><!--
+             --><li>客服</li><!--
+             --><li><a href="register.html">注册</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +31,8 @@
 
     <section>
         <blockquote>
-            有 120 人觉得这篇评测有价值<br>
+            有 120 人觉得这篇评测有价值
+            <br>
             有 126 人觉得这篇评测很欢乐
         </blockquote>
         <h2>推荐</h2>
