--- a/lab4.html
+++ b/lab4.html
@@ -30,6 +30,7 @@
 
         <form class="nav navbar-nav navbar-right col-lg-4">
         <div class="input-group">
+          <label class="sr-only" for="search">Search</label>
           <input type="text" class="form-control" placeholder="Search" name="search">
           <span class="input-group-btn">
             <button class="btn btn-default" type="submit">
